--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:background="@mipmap/splash_bg"
     tools:context=".splash.SplashActivity">
-    <ImageView
+    <pl.droidsonroids.gif.GifImageView
         android:layout_marginTop="40dp"
         android:layout_centerInParent="true"
         android:background="@drawable/ico_huaji"
