--- a/app/src/main/res/layout/fragment_yue_ku.xml
+++ b/app/src/main/res/layout/fragment_yue_ku.xml
@@ -2,8 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <TextView
-        android:text="乐库"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <SearchView
+        android:imeOptions="actionSearch"
+        android:id="@+id/search_view"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"/>
+    <ListView
+        android:id="@+id/net_music_lv"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 </LinearLayout>
