--- a/app/src/main/res/layout/fragment_yue_ku.xml
+++ b/app/src/main/res/layout/fragment_yue_ku.xml
@@ -1,14 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <SearchView
-        android:imeOptions="actionSearch"
-        android:id="@+id/search_view"
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="50dp"/>
-    <ListView
-        android:id="@+id/net_music_lv"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-</LinearLayout>
+        android:layout_height="match_parent">
+        <SearchView
+            android:imeOptions="actionSearch"
+            android:id="@+id/search_view"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"/>
+        <ListView
+            android:id="@+id/net_music_lv"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+    </LinearLayout>
+
+    <ProgressBar
+        android:layout_centerInParent="true"
+        android:visibility="invisible"
+        android:id="@+id/progress_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+</RelativeLayout>
